--- a/py/tctm/adcs_tc.yaml
+++ b/py/tctm/adcs_tc.yaml
@@ -22,3 +22,17 @@ default_commands:
         arguments:
           - name: shell_cmd_str
             type: string
+      - name: "ERASE_CFG_FLASH_CMD"
+        port: 11
+        arguments:
+          - name: "cfg_bank"
+            type: enum
+            choices:
+              - [0, "CFG_MEM_0"]
+              - [1, "CFG_MEM_1"]
+          - name: "partition_id"
+            type: enum
+            choices:
+              - [0, "GOLDEN_BIT"]
+              - [1, "GOLDEN_FSW"]
+              - [2, "UPDATE_BIT"]
